# obazl_tools_cc

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.adoc  README.md
compilation_mode/: BUILD.bazel
config/: BASE.bzl
config/cc/: CONFIG.bzl
config/compilation_mode/: BUILD.bazel
debug/: BUILD.bazel
lib/spawn/: BUILD.bazel  spawn_cmd.c
lib/string/: strlcat.c  strnstr.c
lib/utils/: BUILD.bazel  obazl_utils.c
macros/: BUILD.bazel  macros_debug.h
profile/: BUILD.bazel
rules/: module_profiles.bzl
src/: BUILD.bazel  macros_debug.h  macros_ndebug.h
src/string/: BUILD.bazel  strlcpy.c
src/utils/: BUILD.bazel  obazl_utils.c
test/: MODULE.bazel
