package(default_visibility = ["//visibility:public"])

load("@bazel_skylib//rules:common_settings.bzl", "string_flag", "bool_flag")

bool_flag( name = "dev", build_setting_default = False)
config_setting(name = "dev?", flag_values = {":dev": str(True)})

bool_flag( name = "test", build_setting_default = False)
config_setting(name = "test?", flag_values = {":test": str(True)})

bool_flag( name = "prod", build_setting_default = False)
config_setting(name = "prod?", flag_values = {":prod": str(True)})


# string_flag(name = "profile", build_setting_default = "prod",
#             values = ["dev", "test", "prod"])
# config_setting(name = "dev?", flag_values = {":profile": "dev"})
# config_setting(name = "test?", flag_values = {":profile": "test"})
# config_setting(name = "prod?", flag_values = {":profile": "prod"})

config_setting(name = "macos_opt",
               constraint_values = ["@platforms//os:macos"],
               values = {"compilation_mode": "opt"})
config_setting(name = "linux_opt",
               constraint_values = ["@platforms//os:linux"],
               values = {"compilation_mode": "opt"})

