load("//config:BASE.bzl",
     "BASE_COPTS",
     "BASE_LINKOPTS")

load("@makeheaders//rules:makeheaders.bzl", "makeheaders")

##########
cc_library(
    name  = "obazl_utils",
    visibility = ["//visibility:public"],
    srcs  = ["obazl_utils.c", "mkhdrs"],
    hdrs = [":obazl_utils.h"],
    includes = ["."],
    deps = [
        "@liblogc//lib:logc",
        "@uthash//lib:uthash"
   ],
    copts = BASE_COPTS,
    local_defines = [],
    linkopts = BASE_LINKOPTS,
    linkstatic = 1,
)

################
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [], #"obazl_utils.c"],
    hdrs_renamed = {"obazl_utils.c": "_obazl_utils.h"},
    additional_srcs  = select({
        "@makeheaders//compilation_mode:fastbuild": [
            "@makeheaders//logging:ansi_colors.h",
            "@makeheaders//logging:macros_debug.h"
        ],
        "//conditions:default": [
            "@makeheaders//logging:macros_ndebug.h"
        ]
    }),
)

makeheaders(
    name             = "mkhdrs_export",
    out              = "obazl_utils.h",
    export_interface = True,
    hdrs_srcs        = ["obazl_utils.c"],
    visibility       = ["//visibility:public"]
)

